--- a/index.html
+++ b/index.html
@@ -127,6 +127,96 @@
             </div>
         </div>
     </center>
+    <br><br><br><br>
+
+    <div class="main-design">
+        <div class="left">
+            <img src="https://usabilityclone.vercel.app/images/asset%2018.png" alt="">
+        </div>
+        <div class="right">
+            <p class="color-change">Effortless validation for</p>
+            <br>
+            <h2>Design Professionals</h2>
+            <br>
+            <p>Test interfaces, interaction flows, <br> iconography and more, to help you create <br> intuitive and
+                delightful
+                experiences for your <br> users.</p>
+            <br>
+            <img class="design-img-one" src="https://usabilityclone.vercel.app/images/asset%2019.png" alt="">
+            <br>
+            <p class="color-change">The navigation test is god's gift to UI <br> designers, it probably has the best
+                <br> power-to-simplicity ratio of
+                any <br> software, ever.
+            </p>
+            <br>
+            <div class="design-flex">
+                <img class="design-img-two" src="https://usabilityclone.vercel.app/images/asset%2020.png" alt="">
+                <br>
+                <p>Nick Franklin <br>Chief Executive Officer</p>
+            </div>
+        </div>
+    </div>
+
+
+    <br><br><br>
+
+    <div class="main-markets">
+        <div class="left">
+            <p class="color-change">Optimisation for</p>
+            <br>
+            <h2>Marketers</h2>
+            <br>
+            <p>Fine-tune landing pages, messaging, and <br> creative, helping you optimise conversion <br> rates on
+                marketing
+                campaigns and <br> product launches.</p>
+            <br>
+            <img class="design-img-one" src="https://usabilityclone.vercel.app/images/asset%2022.png" alt="">
+            <br>
+            <p class="color-change">We use UsabilityHub tests to help us <br> make decisions for various projects. <br>
+                From web and mobile design to <br> marketing activities. </p>
+            <br>
+            <div class="design-flex">
+                <img class="design-img-two" src="https://usabilityclone.vercel.app/images/asset%2023.png" alt="">
+                <br>
+                <p>Rick van de Ven<br>Digital Marketing Analyst</p>
+            </div>
+        </div>
+
+        <div class="right">
+            <img src="https://usabilityclone.vercel.app/images/asset%2021.png" alt="">
+        </div>
+    </div>
+
+
+    <br><br><br>
+
+
+    <div class="main-manager">
+        <div class="left">
+            <img src="https://usabilityclone.vercel.app/images/asset%2024.png" alt="">
+        </div>
+        <div class="right">
+            <p class="color-change">Easier decision making for</p>
+            <br>
+            <h2>Product Managers</h2>
+            <br>
+            <p>
+                Ensure you’re delivering the right features <br> to the right customers by validating <br> product
+                concepts with
+                your target <br> audience.</p>
+            <br>
+            <img class="design-img-one" src="https://usabilityclone.vercel.app/images/asset%2025.png" alt="">
+            <br>
+            <p class="color-change">Adopting UsabilityHub got us into <br> the habit of asking our users <br>
+                questions before locking in <br> decisions.</p>
+            <br>
+            <div class="design-flex">
+                <img class="design-img-two" src="https://usabilityclone.vercel.app/images/asset%2026.png" alt="">
+                <br>
+                <p>Ron Diorio <br>VP Innovation & New Products</p>
+            </div>
+        </div>
+    </div>
 
 
 </body>
