--- a/index.html
+++ b/index.html
@@ -217,7 +217,87 @@
             </div>
         </div>
     </div>
+    <br><br><br><br><br>
+    <center>
+        <h2 class="h2-platform">
+            One platform, endless possibilities
+        </h2>
+        <br>
+        <button class="btn-platform">See more examples </button>
+    </center>
+    <br>
 
+    <div class="card-main">
+        <div class="card-one">
+            <h3>Can users complete <br> task in my software <br> interface?</h3>
+        </div>
+
+        <div class="card-two">
+            <h3>Can users find <br> important pages on my <br> website?</h3>
+        </div>
+
+        <div class="card-three">
+            <h3>is my website's <br> intended audience <br> clear?</h3>
+        </div>
+
+        <div class="card-four">
+            <h3>Do vistitors understand <br> what a page is about?</h3>
+        </div>
+    </div>
+    <br><br><br><br><br><br><br>
+
+    <div class="testing">
+        <h2>Start testing today</h2>
+        <br>
+        <p>Take the guesswork out of design decisions</p>
+        <br>
+        <center><button>Get Started</button></center>
+    </div>
+    <br><br>
+    <footer>
+        <div class="left">
+            <img src="https://usabilityclone.vercel.app/images/asset%201.png" alt="">
+        </div>
+        <div class="middle">
+            <h2>Product</h2>
+            <p>Overview</p>
+            <p>Pricing</p>
+            <p>Research panel</p>
+            <p>Customers</p>
+            <p>Status page</p>
+            <p>Status page</p>
+            <p>Sign up</p>
+            <p>Book a demo</p>
+        </div>
+        <div class="mid-ddle">
+            <h2>Card sorting</h2>
+            <p>Prototype testing</p>
+            <p>First click tests</p>
+            <p>Preference tests</p>
+            <p>Five second tests</p>
+            <p>Design surveys</p>
+        </div>
+        <div class="right">
+            <h2>Resources</h2>
+            <p>Blog</p>
+            <p>Testing guides</p>
+            <p>Help center</p>
+            <p>Contact</p>
+            <p>Careers</p>
+        </div>
+    </footer>
+
+
+
+    <div class="footer">
+        <p>Privacy Policy</p>
+        <p>Terms & Conditions</p>
+        <p>Security information</p>
+        <img src="https://usabilityclone.vercel.app/images/asset%2028.png" alt="">
+        <img src="https://usabilityclone.vercel.app/images/asset%2029.png" alt="">
+        <img src="https://usabilityclone.vercel.app/images/asset%2030.png" alt="">
+        <img src="https://usabilityclone.vercel.app/images/asset%2031.png" alt="">
+    </div>
 
 </body>
 
